DatePicker: Datepicker issue on mobile devise fixed

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4904,3 +4904,6 @@ width: 44px;
     width: 90% !important;
   }
 }
+.picker__frame {
+  top: 100px !important;
+}
